# mediautil

./: .gitignore  CMakeLists.txt
assets/: bgm.aac  video.ts
include/mediautil/: audio_filter.h  concat.h
lib/: libmediautil.dylib
mediautil/: CMakeLists.txt  audio_filter.cpp  audio_filter.h  bgm.cpp  bgm.h  clip.cpp  clip.h  concat.cpp  concat.h  foundation.h  log.cpp  log.h  metadata.cpp  remux.cpp  remux.h  transcode.cpp  transcode.h
src/: audio_filter.cpp  bgm.cpp  bgm.h  concat.cpp  log.cpp  log.h  metadata.h  remux.cpp  transcode.cpp  video_filter.cpp  video_filter.h
test/: CMakeLists.txt  bgm.cpp  clip.cpp  common.cpp  common.h  concat.cpp  transcode.cpp
test/assets/: audio.aac  short.aac
